# Personal-Intelligence

./: .env.example  .gitignore  README.md  pyproject.toml
src/: config-example.py  config.py  main.py
src/assistant/: main.py
src/assistant/tools/: analysis.py  calendar.py  memory.py  notion.py  tasks.py  url.py
src/interfaces/telegram/: bot.py
src/prompts/: assistant.py
src/utils/: datetime.py
