[project]
name = "personal-intelligence"
version = "0.1.0"
description = "A personal intelligence system based on AI agents."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Johannes Schießl", email = "contact.johannes@icloud.com" }]
requires-python = ">=3.12"
dependencies = [
    "openai>=1.58.1",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.9",
]
