[project]
name = "personal-intelligence"
version = "0.1.0"
description = "A personal intelligence system based on AI agents."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Johannes Schießl", email = "contact.johannes@icloud.com" }]
requires-python = ">=3.12"
dependencies = [
    "openai>=1.58.1",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.9",
    "google-api-python-client>=2.120.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "pytz>=2024.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "docker>=7.0.0",
]
